# kreg-haskell

./: .gitignore  LICENSE  README.md  kreg.cabal  stack.yaml
app/: Main.hs
app/Kreg/: Options.hs  TokenFileManager.hs
app/Kreg/Options/: Auth.hs  Whoami.hs
app/Kreg/UI/: UserInput.hs
src/: Lib.hs
src/Registry/: Client.hs
