name:                kreg
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/manuelleduc/kreg-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Manuel Leduc
maintainer:          manuel.leduc@gmail.com
copyright:           beerware
category:            draft
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Registry.Client
  build-depends:       base >= 4.7 && < 5
                     , wreq
                     , http-client
                     , aeson
                     , lens
  default-language:    Haskell2010

executable kreg-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , kreg
                     , optparse-generic
                     , haskeline
                     , directory
                     , filepath
  default-language:    Haskell2010

test-suite kreg-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , kreg
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/manuelleduc/kreg-haskell
